crates/cli/tests/integration/snapshots/integration__snapshot_tests__markdown_workspace_deps.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: output
---
## Fallow: 1 issue found

### Unused dependencies (1)

- `lodash` (`packages/ui/package.json`)
