crates/cli/tests/integration/snapshots/integration__snapshot_tests__pr_comment_github_stale_baseline.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
assertion_line: 1998
expression: "stale_baseline_pr_comment(Provider::Github)"
---
<!-- fallow-id: fallow-results -->
### Fallow codebase report

**Quality gate failed**

Found **1** finding.

<details>
<summary>Dead code (1)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| major | `fallow/unused-export` | `src/helpers.ts`:1 | Export 'capitalize' is never imported by other modules |

</details>


Generated by fallow.

> **Baseline matched nothing.** All 8 saved entries went unmatched. Paths may have changed, or the baseline was saved elsewhere. Re-save it from a whole-project run. Gate outcomes: failed stale-baseline.
