crates/cli/tests/integration/snapshots/integration__snapshot_tests__pr_comment_gitlab_fresh_baseline.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
assertion_line: 2024
expression: "fresh_baseline_pr_comment(Provider::Gitlab)"
---
<!-- fallow-id: fallow-results -->
### Fallow codebase report

**Quality gate failed**

Found **1** finding.

<details>
<summary>Dead code (1)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| major | `fallow/unused-export` | `src/helpers.ts`:1 | Export 'capitalize' is never imported by other modules |

</details>


Generated by fallow.

> Gate outcomes: passed stale-baseline.
