crates/cli/tests/integration/snapshots/integration__snapshot_tests__pr_comment_gitlab_unrecognised_baseline.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: "baseline_pr_comment(&unrecognised_baseline_fixture(), Provider::Gitlab)"
---
<!-- fallow-id: fallow-results -->
### Fallow codebase report

**Quality gate failed**

Found **1** finding.

<details>
<summary>Dead code (1)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| major | `fallow/unused-export` | `src/helpers.ts`:1 | Export 'capitalize' is never imported by other modules |

</details>


Generated by fallow.

> **Baseline recognises nothing.** `fallow health` saved this baseline, so this command reads nothing from it and it suppresses nothing. Gate outcomes: failed stale-baseline.
