crates/cli/tests/integration/snapshots/integration__snapshot_tests__review_github_envelope.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: json_str
---
{
  "event": "COMMENT",
  "body": "### Fallow codebase report\n\n27 inline comments on the changed lines. Open the Files changed tab to review.\n\n<!-- fallow-review -->\n\n<!-- fallow-fingerprint:v3: bcb4807a4a01a634 -->",
  "summary": {
    "body": "### Fallow codebase report\n\n27 inline comments on the changed lines. Open the Files changed tab to review.\n\n<!-- fallow-review -->\n\n<!-- fallow-fingerprint:v3: bcb4807a4a01a634 -->",
    "fingerprint": "bcb4807a4a01a634"
  },
  "comments": [
    {
      "path": "app/components/index.ts",
      "line": 2,
      "side": "RIGHT",
      "body": "**warn** `fallow/mixed-client-server-barrel`: Barrel re-exports both a \"use client\" module \\(\\`./Button\\`\\) and a server-only module \\(\\`./fetchUser\\`\\); one import drags the other's directive across the boundary\n\n<!-- fallow-fingerprint:v3: 2e57fc499772bc84 -->",
      "fingerprint": "2e57fc499772bc84"
    },
    {
      "path": "app/page.tsx",
      "line": 3,
      "side": "RIGHT",
      "body": "**warn** `fallow/invalid-client-export`: Export \\`metadata\\` is not allowed in a \"use client\" file \\(Next.js server-only / route-config name\\)\n\n<!-- fallow-fingerprint:v3: 8e530508aa988833 -->",
      "fingerprint": "8e530508aa988833"
    },
    {
      "path": "package.json",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `fallow/misconfigured-dependency-override`: Override \\`@types/react@\\<\\<18\\` -\\> \\`18.0.0\\` is malformed: override key cannot be parsed\n\n<!-- fallow-fingerprint:v3: 21be520b86ce0207 -->",
      "fingerprint": "21be520b86ce0207"
    },
    {
      "path": "package.json",
      "line": 5,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-dependency`: Package 'lodash' is in dependencies but never imported\n\n**warn** `fallow/unused-dev-dependency`: Package 'jest' is in devDependencies but never imported\n\n**warn** `fallow/unused-optional-dependency`: Package 'fsevents' is in optionalDependencies but never imported\n\n<!-- fallow-fingerprint:v3: merged:37df0011a9d7ac87 -->",
      "fingerprint": "merged:37df0011a9d7ac87"
    },
    {
      "path": "package.json",
      "line": 8,
      "side": "RIGHT",
      "body": "**warn** `fallow/type-only-dependency`: Package 'zod' is only imported via type-only imports \\(consider moving to devDependencies\\)\n\n<!-- fallow-fingerprint:v3: 34d2064787c07f45 -->",
      "fingerprint": "34d2064787c07f45"
    },
    {
      "path": "package.json",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `fallow/test-only-dependency`: Package 'msw' is only imported by test files \\(consider moving to devDependencies\\)\n\n<!-- fallow-fingerprint:v3: ebc538b211ef05f5 -->",
      "fingerprint": "ebc538b211ef05f5"
    },
    {
      "path": "packages/app/package.json",
      "line": 14,
      "side": "RIGHT",
      "body": "**error** `fallow/unresolved-catalog-reference`: Package 'old-react' is referenced via \\`catalog:react17\\` but catalog 'react17' does not declare it; \\`pnpm install\\` will fail \\(available in: react18\\)\n\n<!-- fallow-fingerprint:v3: 3b583c29be84724a -->",
      "fingerprint": "3b583c29be84724a"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 6,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-catalog-entry`: Catalog entry 'is-even' is not referenced by any workspace package\n\n<!-- fallow-fingerprint:v3: 01c68b8e65ee42b9 -->",
      "fingerprint": "01c68b8e65ee42b9"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 9,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-dependency-override`: Override \\`axios\\` forces version \\`^1.6.0\\` but \\`axios\\` is not declared by any workspace package or resolved in the lockfile \\(may target a transitive dependency; pnpm install --frozen-lockfile is the ground truth\\)\n\n<!-- fallow-fingerprint:v3: 9e455c649fd184fe -->",
      "fingerprint": "9e455c649fd184fe"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 10,
      "side": "RIGHT",
      "body": "**warn** `fallow/empty-catalog-group`: Catalog group 'react17' has no entries\n\n<!-- fallow-fingerprint:v3: 03506bd5a376e100 -->",
      "fingerprint": "03506bd5a376e100"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-catalog-entry`: Catalog entry 'old-thing' \\(catalog 'legacy'\\) is not referenced by any workspace package\n\n<!-- fallow-fingerprint:v3: 2d5072d3451b44dd -->",
      "fingerprint": "2d5072d3451b44dd"
    },
    {
      "path": "src/Child.svelte",
      "line": 6,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-svelte-event`: event \\`dead\\` is dispatched by component \\`Child\\` but listened to nowhere in the project \\(remove it or listen for it\\)\n\n<!-- fallow-fingerprint:v3: 844a7c0e7c849332 -->",
      "fingerprint": "844a7c0e7c849332"
    },
    {
      "path": "src/a.ts",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `fallow/circular-dependency`: Circular dependency: src/a.ts → src/b.ts\n\n<!-- fallow-fingerprint:v3: 405f0abed155920d -->",
      "fingerprint": "405f0abed155920d"
    },
    {
      "path": "src/api/index.ts",
      "line": 1,
      "side": "RIGHT",
      "body": "**warn** `fallow/re-export-cycle`: Re-export cycle: src/api/index.ts \\<-\\> src/api/internal/index.ts\n\n<!-- fallow-fingerprint:v3: 3b15e7a61f99e1df -->",
      "fingerprint": "3b15e7a61f99e1df"
    },
    {
      "path": "src/app.ts",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `fallow/unresolved-import`: Import './missing-module' could not be resolved\n\n> Fix intent: Fix the import path or install the missing package.\n\n<!-- fallow-fingerprint:v3: 231a7ed9e16a19a6 -->",
      "fingerprint": "231a7ed9e16a19a6"
    },
    {
      "path": "src/cli.ts",
      "line": 2,
      "side": "RIGHT",
      "body": "**error** `fallow/unlisted-dependency`: Package 'chalk' is imported but not listed in package.json\n\n<!-- fallow-fingerprint:v3: 2ef210a41606f3aa -->",
      "fingerprint": "2ef210a41606f3aa"
    },
    {
      "path": "src/config.ts",
      "line": 15,
      "side": "RIGHT",
      "body": "**error** `fallow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- fallow-fingerprint:v3: da73cab5c65b029d -->",
      "fingerprint": "da73cab5c65b029d"
    },
    {
      "path": "src/dead.ts",
      "line": 1,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-file`: File is not reachable from any entry point\n\n> Fix intent: Delete the file or add a real entry-point reference.\n\n> No automatic fix: `fallow fix` never deletes files. Delete it by hand once you have confirmed nothing loads it at runtime, or keep it and add `// fallow-ignore-file unused-file` at the top.\n\n<!-- fallow-fingerprint:v3: e3912cb6bb9b0212 -->",
      "fingerprint": "e3912cb6bb9b0212"
    },
    {
      "path": "src/enums.ts",
      "line": 8,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-enum-member`: Enum member 'Status.Deprecated' is never referenced\n\n<!-- fallow-fingerprint:v3: 090d4d65832bf868 -->",
      "fingerprint": "090d4d65832bf868"
    },
    {
      "path": "src/service.ts",
      "line": 42,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-class-member`: Class member 'UserService.legacyMethod' is never referenced\n\n<!-- fallow-fingerprint:v3: 25579ea7b6940453 -->",
      "fingerprint": "25579ea7b6940453"
    },
    {
      "path": "src/stores/counter.ts",
      "line": 24,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-store-member`: Store member 'useCounterStore.legacyAction' is never referenced\n\n<!-- fallow-fingerprint:v3: a2cd7cf87121a06f -->",
      "fingerprint": "a2cd7cf87121a06f"
    },
    {
      "path": "src/types.ts",
      "line": 5,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-type`: Type export 'OldType' is never imported by other modules\n\n<!-- fallow-fingerprint:v3: deb0e9de35cc06d9 -->",
      "fingerprint": "deb0e9de35cc06d9"
    },
    {
      "path": "src/types.ts",
      "line": 30,
      "side": "RIGHT",
      "body": "**error** `fallow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- fallow-fingerprint:v3: cc6a09c8dc227321 -->",
      "fingerprint": "cc6a09c8dc227321"
    },
    {
      "path": "src/useTheme.ts",
      "line": 5,
      "side": "RIGHT",
      "body": "**warn** `fallow/unprovided-inject`: inject\\(\\`THEME\\_KEY\\`\\) has no matching provide\\(\\`THEME\\_KEY\\`\\) in this project; at runtime it returns undefined \\(provide the key or remove this inject\\)\n\n<!-- fallow-fingerprint:v3: 82ebf4620cc2bba5 -->",
      "fingerprint": "82ebf4620cc2bba5"
    },
    {
      "path": "src/user-card.component.ts",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-component-input`: input \\`variant\\` is declared but referenced nowhere in component \\`UserCardComponent\\` \\(remove it or use it\\)\n\n<!-- fallow-fingerprint:v3: 43da4dfe078e4765 -->",
      "fingerprint": "43da4dfe078e4765"
    },
    {
      "path": "src/user-card.component.ts",
      "line": 15,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-component-output`: output \\`selected\\` is declared but emitted nowhere in component \\`UserCardComponent\\` \\(remove it or emit it\\)\n\n<!-- fallow-fingerprint:v3: 48412c022e3ac5ab -->",
      "fingerprint": "48412c022e3ac5ab"
    },
    {
      "path": "src/utils.ts",
      "line": 10,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-export`: Export 'helperFn' is never imported by other modules\n\n> Fix intent: Remove the export or mark it public if it is part of the API.\n\n<!-- fallow-fingerprint:v3: ebe2360218821412 -->",
      "fingerprint": "ebe2360218821412"
    }
  ],
  "marker_regex": "^<!-- fallow-fingerprint:v[23]: ((?:[a-z]+:)?[0-9a-f]{16}) -->\\s*$",
  "marker_regex_flags": "m",
  "meta": {
    "schema": "fallow-review-envelope/v3",
    "provider": "github",
    "check_conclusion": "failure"
  }
}
